criando a base do js

--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -159,6 +159,7 @@
             <h2 class="rodape__logo"><span class="rodape__logo--negrito">Wi</span>Bank</h2>
         </section>
     </footer>
+    <script src="../js/script.js" type="module"></script>
 </body>
 
 </html>
